sample/TypeError/runtime_sample.py
s = 0
for i in range(1, "9"):
    s += i
    
print(sum(x))